[iOS] Fix tab grid appearing during launch.

This CL fixes the problem of the tab grid (the root view controller) being briefly visible when the app launches.

Note that this problem isn't simply a matter of the initial tab view controller (the BVC) being  presented with an animation at launch; even if the presentation isn't animated, the tab grid is visible for several frames as the app launches.

The fix in this CL is to (again) insert the launch image view on top of the tab grid during launch.

This is done inside the TabGridCoordinator. If the launch view is present, the presentation of the tab view controller isn't animated. The launch view is removed the first time a presentation completes, and it is never added again.

There are a few problems with this approach that should be resolved after M69 launches:

 - Futzing around with view hierarchies isn't something a coordinator should do. I'm doing it that way here because it at least keeps things well-contained.

 - Jamming the launch view in to spackle over UIKit glitches is getting kind of old.

Bug: 826288
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I701b550f9eef16452a608b839c9a321b6b7a966a
Reviewed-on: https://chromium-review.googlesource.com/1138329
Reviewed-by: edchin <edchin@chromium.org>
Commit-Queue: Mark Cogan <marq@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575588}
Former-commit-id: 4102b507b7910df30872a3cae07558a2484283a4